@@ -1781,6 +1781,8 @@ struct cobjmp_buf {
 /*******************************/
 /* Functions in common.c */
 COB_EXPIMP void		cob_set_dump_signal (void *);
+COB_EXPIMP const char*	cob_get_sig_name (int);
+COB_EXPIMP const char*	cob_get_sig_description (int);
 COB_EXPIMP const char*	libcob_version (void);
 COB_EXPIMP int		set_libcob_version (int *, int *, int *);
 COB_EXPIMP void		print_info	(void);
